--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -30,6 +29,12 @@
             android:text="Test List" />
 
         <Button
+            android:id="@+id/btn_test_new_list"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Testnew List" />
+
+        <Button
             android:id="@+id/btn_show_layout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -43,8 +48,8 @@
     </LinearLayout>
 
     <ListView
+        android:id="@+id/main_lv"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/main_lv"></ListView>
+        android:layout_height="match_parent"></ListView>
 
 </LinearLayout>
