--- a/app/src/main/res/layout/activity_test_list.xml
+++ b/app/src/main/res/layout/activity_test_list.xml
@@ -7,41 +7,36 @@
     android:orientation="vertical"
     tools:context="com.example.tn_ma_l30000048.myjsontest.activity.TestListActivity">
 
-    <!--<RelativeLayout-->
-        <!--android:layout_width="200dp"-->
-        <!--android:layout_height="200dp">-->
-        <!--<Button-->
-            <!--android:id="@+id/btn"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content" />-->
-        <!--<TextView-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:text="daddasa"-->
-            <!--android:layout_below="@+id/btn"-->
-            <!--android:layout_toRightOf="@+id/btn"/>-->
-    <!--</RelativeLayout>-->
-
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="add list"
         android:id="@+id/tv_add"
-        android:layout_marginBottom="5dp"/>
-    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="delete list"
+        android:layout_marginBottom="5dp"
+        android:text="add list" />
+    <TextView
         android:id="@+id/tv_delete"
-        android:layout_marginBottom="5dp"/>
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="5dp"
+        android:text="delete list" />
+
 
     <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv_test"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/rv_test">
+        android:layout_height="wrap_content">
 
     </android.support.v7.widget.RecyclerView>
+
+
+    <cn.lemon.view.RefreshRecyclerView
+        android:id="@+id/refresh_recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:load_more_able="false"
+        app:refresh_able="true" />
 
 
 </LinearLayout>
