view的包装 添加了部分insertview的逻辑 添加了部分模拟异步加载数据的逻辑

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,10 +30,10 @@
             android:text="Test List" />
 
         <Button
-            android:id="@+id/btn_test_new_list"
+            android:id="@+id/btn_test_relative"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Testnew List" />
+            android:text="testRelative" />
 
         <Button
             android:id="@+id/btn_my_list"
