初步完成了非列表界面数据加载的逻辑重构 对列表的数据加载重写了一些

--- a/app/src/main/res/layout/activity_test_my_list.xml
+++ b/app/src/main/res/layout/activity_test_my_list.xml
@@ -8,10 +8,10 @@
     tools:context="com.example.tn_ma_l30000048.myjsontest.activity.TestMyListActivity">
 
 
-    <!--<com.example.tn_ma_l30000048.myjsontest.view.MyRecyclerView-->
-    <!--android:id="@+id/enhanced_recycler_view"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="wrap_content" />-->
+    <com.example.tn_ma_l30000048.myjsontest.view.MyRecyclerView
+        android:id="@+id/enhanced_recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
 
 </LinearLayout>
