--- a/app/src/main/res/layout/activity_json_to_view.xml
+++ b/app/src/main/res/layout/activity_json_to_view.xml
@@ -28,13 +28,19 @@
         <!--android:layout_width="wrap_content"-->
         <!--android:layout_height="wrap_content"-->
         <!--android:id="@+id/bb1"-->
-        <!--android:layout_marginTop="-20dp"-->
-        <!--android:layout_marginLeft="19dp"-->
+        <!--android:layout_marginTop="120dp"-->
+        <!--android:layout_marginLeft="150dp"-->
         <!--android:layout_toRightOf="@+id/bb"-->
-        <!--android:layout_below="@+id/bb"-->
         <!--android:layout_alignTop="@+id/bb"-->
-        <!--android:layout_alignBottom="@+id/bb"/>-->
+        <!--/>-->
 
+        <!--<Button-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_alignRight="@+id/bb1"-->
+        <!--android:layout_alignBottom="@+id/bb1"-->
+        <!--android:layout_marginBottom="20dp"-->
+        <!--android:layout_marginRight="130dp"/>-->
     </RelativeLayout>
 
 </LinearLayout>
